<resources>

    <string name="facebook_app_id">4394745367235472</string>
    <string name="fb_login_protocol_scheme">fb4394745367235472</string>
    <string name="app_name">Newsta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_btn_text">Log In</string>
    <string name="sign_up_btn_text">Sign Up</string>
    <string name="hint_confirmpassword">Confirm Password</string>
    <string name="hint_username">Username</string>
    <string name="heading_signup_fragment">Create a new\naccount</string>
    <string name="descr_heading_signup">Create a new NewsTA account for\nyou to latest catchup of news</string>
    <string name="text_btn_signup">SIGN UP</string>
    <string name="text_btn_signin">SIGN IN</string>
    <string name="heading_signin_fragment">Welcome Back</string>
    <string name="descr_heading_signin">Sign in with your NewsTA account for latest catchup of news</string>
    <string name="password_strength_message">Password should contain uppercase and lowercase characters, digits and/or special characters and must be 8 characters long</string>
    <string name="newsta">Newsta</string>
    <string name="saved_stories">Saved Stories</string>
    <string name="settings">Settings</string>
    <string name="font_scale">Font scale</string>
    <string name="font_size">Font size</string>
    <string name="manage_categories">Reorder categories</string>
    <string name="categories">Categories</string>

    <string-array name="font_sizes_array">
        <item>Default</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string name="longLabel">Search With Newsta</string>
    <string name="shortLabel">Search</string>
    <string name="type_here_to_search">Type here to search</string>
    <string name="notify_stories">Notify Stories</string>
    <string name="skip">Skip</string>
    <string name="continue_without_log_in">Continue without Log In</string>
    <string name="log_in">Log In</string>
    <string name="continue_without_sign_up">Continue without Sign Up</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="skip_for_now"><![CDATA[Skip for now >]]></string>
    <string name="recommendedStories">Recommended</string>
    <string name="explore">Explore</string>
    <string name="notify">Notification</string>
    <string name="savedstories">Bookmark</string>

</resources>