<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/bg_color"
        tools:context=".ui.authentication.SignUpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/btn_back"
                style="@style/Rippleeffect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/container_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/container_inputs"
                android:text="@string/descr_heading_signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_back"
                app:layout_constraintWidth_percent="0.6">

                <TextView
                    android:id="@+id/heading_signup"
                    style="@style/BigHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heading_signup_fragment"

                    app:layout_constraintBottom_toTopOf="@id/descr_heading_signup"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/descr_heading_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/descr_heading_signup" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/container_inputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="22dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_heading">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldUsername"
                    style="@style/TextFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeuib"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldPassword"
                    style="@style/PasswordFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeuib"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldConfirmPassword"
                    style="@style/PasswordFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_confirmpassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textFieldPassword">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeuib"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/btn_signup"
                style="@style/Ctabutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    style="@style/Ctabuttontextstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.15"
                    android:text="@string/text_btn_signup"

                    />
            </androidx.cardview.widget.CardView>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>