<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        tools:context=".ui.landing.fragments.StoriesDisplayFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.96"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/nav_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintGuide_percent="0.09"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back"
            style="@style/Rippleeffect"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back"
            app:layout_constraintBottom_toTopOf="@id/nav_guideline"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/top_guideline" />

        <TextView
            android:id="@+id/app_name"
            style="@style/TextActionBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            
            app:layout_constraintBottom_toTopOf="@id/nav_guideline"
            app:layout_constraintEnd_toStartOf="@id/search"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toBottomOf="@id/top_guideline" />

        <ImageView
            android:id="@+id/search"
            style="@style/Rippleeffect"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toTopOf="@id/nav_guideline"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintTop_toBottomOf="@id/top_guideline" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/font_scale_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="16dp"

            app:layout_constraintBottom_toTopOf="@id/categories_container"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/nav_guideline"
            app:layout_constraintEnd_toStartOf="@id/end_guideline">

            <TextView
                android:id="@+id/font_scale"
                style="@style/SettingsItemText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_size"
                android:padding="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Spinner
                android:id="@+id/spinner_font_size"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginHorizontal="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.045dp"
                app:layout_constraintTop_toBottomOf="@id/font_scale"
                android:layout_marginTop="12dp"
                android:background="@color/dividerColor" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/categories_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="16dp"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/font_scale_container"
            app:layout_constraintEnd_toStartOf="@id/end_guideline">

            <TextView
                android:id="@+id/categories"
                style="@style/SettingsItemText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_categories"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
