<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:fillViewport="true"
        tools:context=".ui.authentication.SigninFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guidline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="846dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_percent="0.04"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guidline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="846dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_percent="0.96"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_back"
                style="@style/Rippleeffect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                app:layout_constraintStart_toStartOf="@id/left_guidline"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <LinearLayout
                android:id="@+id/container_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:orientation="vertical"
                android:text="@string/descr_heading_signin"
                app:layout_constraintBottom_toTopOf="@id/container_inputs"
                app:layout_constraintStart_toStartOf="@+id/left_guidline"
                app:layout_constraintTop_toBottomOf="@id/btn_back"
                app:layout_constraintWidth_percent="0.6">

                <TextView
                    android:id="@+id/heading_signin"
                    style="@style/BigHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heading_signin_fragment" />

                <TextView
                    android:id="@+id/descr_heading_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/descr_heading_signin" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/container_inputs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/text_forgotpassword"
                app:layout_constraintEnd_toEndOf="@id/right_guidline"
                app:layout_constraintStart_toEndOf="@id/left_guidline"
                app:layout_constraintTop_toBottomOf="@id/container_heading">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldUsername"
                    style="@style/TextFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeuib"
                        android:inputType="textPersonName|textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldPassword"
                    style="@style/PasswordFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeuib"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/text_forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="Forgot Password?"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_inputs" />

            <LinearLayout
                android:id="@+id/container_donthaveanacc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/btn_signin"
                app:layout_constraintEnd_toEndOf="@id/right_guidline"
                app:layout_constraintStart_toStartOf="@id/left_guidline"
                app:layout_constraintTop_toBottomOf="@id/container_donthaveanacc"
                app:layout_constraintTop_toTopOf="@+id/bottom_guideline">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have an account?"
                    android:textColor="@color/colorText"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeuib"
                    android:text=" Sign up"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_signin"
                style="@style/Ctabutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/right_guidline"
                app:layout_constraintStart_toStartOf="@id/left_guidline"
                app:layout_constraintTop_toBottomOf="@id/container_donthaveanacc">

                <TextView
                    style="@style/Ctabuttontextstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.15"
                    android:text="@string/text_btn_signin" />

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.02" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottom_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.8" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
